# SSS2019

build_tools/autotools/autom4te.cache/: output.0  traces.0
build_tools/autotools/m4/: ax_boost_filesystem.m4
build_tools/notools/solution/: build.sh
build_tools/simplemake/solution/: Makefile
optimization/: CMakeLists.txt
optimization/01_avx2/: CMakeLists.txt
optimization/02_memory_access_patterns/: CMakeLists.txt
optimization/03_memory/: CMakeLists.txt  matrix_product.cpp  matrix_product_contiguous.cpp
optimization/04_loop/: CMakeLists.txt  init.hpp  loop_reordered.cpp
optimization/avx2/: CMakeLists.txt  dot_product.cpp  dot_product_avx2.cpp
optimization/loop/: CMakeLists.txt  loop.cpp
optimization/memory/: CMakeLists.txt  matrix_product.cpp  matrix_product_contiguous.cpp
optimization/memory_access_patterns/: CMakeLists.txt  memory_access.cpp
